feat: сделать popup+ux kit

--- a/blocks/photo-grid/__like-button/photo-grid__like-button.css
+++ b/blocks/photo-grid/__like-button/photo-grid__like-button.css
@@ -1,3 +1,14 @@
 .photo-grid__like-button {
     margin-right: 20px;
 }
+
+.photo-grid__like-button:hover {
+    opacity: 0.5;
+    cursor: url(/images/Cursor_1.png), pointer;
+}
+
+.photo-grid__like-button:active {
+    opacity: 1;
+    background-image: url(/images/Like_black.png);
+    cursor: url(/images/Cursor_1.png), pointer;
+}
