--- a/pages/index.css
+++ b/pages/index.css
@@ -20,5 +20,12 @@
 @import url(../blocks/photo-grid/__card-description/photo-grid__card-description.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/footer__copyright/footer__copyright.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__description/popup__description.css);
+@import url(../blocks/popup/__name/popup__name.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__close-icone/popup__close-icone.css);
 
 
