--- a/blocks/popup/__close-icone/popup__close-icone.css
+++ b/blocks/popup/__close-icone/popup__close-icone.css
@@ -11,3 +11,14 @@
     opacity: 0.6;
     cursor: url(/images/Cursor_1.png), pointer;
 }
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .popup__close-icone {
+        top: -11.5%;
+        left: 45.5%;
+        width: 20px;
+        height: 20px;
+    }
+   
+}
