--- a/blocks/footer/footer__copyright/footer__copyright.css
+++ b/blocks/footer/footer__copyright/footer__copyright.css
@@ -11,4 +11,14 @@
     font-size: 18px;
     line-height: 22px;
     color: #545454;
+
+    padding-bottom: 60px;
+}
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .footer__copyright {
+    margin-left: 19px;
+    padding-bottom: 36px;
+    }   
 }
