--- a/blocks/header/__group-logo/header__group-logo.css
+++ b/blocks/header/__group-logo/header__group-logo.css
@@ -1,4 +1,18 @@
-.header__group-logo.css {
+.header__group-logo {
     margin: 0;
     margin-bottom: 41px;
+}
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .header__group-logo {
+        width: 103.74px;
+        height: 24.4px;
+        margin: 0;
+        margin-left: 27px;
+        margin-top: 28px;
+        margin-bottom: 31.6px;
+
+    }
+    
 }
