--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -14,3 +14,16 @@
     background-color: white; 
     font-family: Inter, Arial, sans-serif;
 }
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .popup__container {
+        width: 282px;
+        height: 322px;
+        top: 18%;
+        left: 6%;
+        align-items: center;
+       
+    }
+   
+}
