--- a/blocks/popup/__description/popup__description.css
+++ b/blocks/popup/__description/popup__description.css
@@ -17,6 +17,15 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .popup__description {
+        margin-left: 0;
+        width: 238px;
+    }
+   
+}
+
 .popup__description::-webkit-input-placeholder {color:#000000;}
 .popup__description::-moz-placeholder          {color:#000000;}
 .popup__description:-moz-placeholder           {color:#000000;}
