--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -17,3 +17,13 @@
     
     cursor: url(/images/Cursor_1.png), pointer;
 }
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .popup__submit-button {
+        width: 238px;
+        height: 46px;
+        margin-left: 0;
+    }
+   
+}
