--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -9,3 +9,15 @@
     font-size: 24px;
     line-height: 29px;
 }
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .popup__title {
+        font-weight: 900;
+        font-size: 18px;
+        line-height: 22px;
+        margin-left: 0;
+        margin-bottom: 75px;
+    }
+   
+}
