--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-    display: none;
+    display: block; /*none*/
     position: fixed;
     top: 0;
     right: 0;
@@ -10,3 +10,4 @@
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 0;
 }
+
