--- a/blocks/profile/__info-description/profile__info-description.css
+++ b/blocks/profile/__info-description/profile__info-description.css
@@ -7,3 +7,16 @@
     color: #FFFFFF;
     margin: 0;
 }
+
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .profile__info-description {
+        margin-top: 14px;
+        margin-bottom: 36px;
+
+        font-size: 14px;
+        line-height: 17px;
+
+    }   
+}
