--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -1,8 +1,20 @@
 .profile__info-edit-button {
     margin: 0;
+    margin-left: 24px;
 }
 
 .profile__info-edit-button:hover {
     opacity: 0.6;
     cursor: url(/images/Cursor_1.png), pointer;
 }
+
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+    .profile__info-edit-button {
+        width: 18px;
+        height: 18px;
+        margin-left: 10px;
+    }   
+}
+        
