--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,7 +1,14 @@
 .profile__info {
         display: flex;
         flex-direction: column;
-       
         margin-left: 30px;
-        width: 336px;
+        max-width: 336px;
 }
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+
+        .profile__info{
+            margin: 0;
+            align-items: center;
+        }   
+    }
