--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/footer__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/popup_off.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__description/popup__description.css);
 @import url(../blocks/popup/__name/popup__name.css);
