--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,13 +1,7 @@
 .popup__container {
-    position: fixed;
     display: flex;
     flex-direction: column;
-    right: 0;
-    bottom: 0;
-    top: 22%;
-    left: 33%;
     width: 430px;
-    height: 330px;
     border-radius: 10px;
     background-color: white;
     font-family: Inter, Arial, sans-serif;
@@ -16,10 +10,7 @@
 @media screen and (max-width: 580px) and (min-width: 320px)   {
 
     .popup__container {
-        width: 282px;
-        height: 322px;
-        top: 18%;
-        left: 6%;
+        max-width: 282px;
         align-items: center;
        
     }
