--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -11,10 +11,10 @@
     text-align: center;
     color: #FFFFFF;
     margin-left: 36px;
+    margin-bottom: 30px;
 }
 
 .popup__submit-button:hover {
-    
     cursor: url(/images/Cursor_1.png), pointer;
 }
 
