--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -1,6 +1,9 @@
 .profile__info-edit-button {
     margin: 0;
-    margin-left: 24px;
+    margin-left: auto;
+    background-color: transparent;
+    border: none;
+    padding: 0;
 }
 
 .profile__info-edit-button:hover {
@@ -9,11 +12,10 @@
 }
 
 
-@media screen and (max-width: 580px) and (min-width: 320px)   {
+@media screen and (max-width: 660px) and (min-width: 320px)   {
 
     .profile__info-edit-button {
         width: 18px;
-        height: 18px;
         margin-left: 10px;
     }   
 }
