--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -7,10 +7,14 @@
     color: #FFFFFF;
     margin: 0;
     margin-bottom: 16px;
+    text-overflow: ellipsis;   
+    white-space: nowrap;   
+    overflow: hidden;
+    max-width: 294px;
 
 }
 
-@media screen and (max-width: 580px) and (min-width: 320px)   {
+@media screen and (max-width: 660px) and (min-width: 320px)   {
 
     .profile__info-name {
         font-weight: 500;
