--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,13 +2,14 @@
         display: flex;
         flex-direction: column;
         margin-left: 30px;
-        max-width: 336px;
+        width: 336px;
 }
 
-@media screen and (max-width: 580px) and (min-width: 320px)   {
+@media screen and (max-width: 660px) and (min-width: 320px)   {
 
         .profile__info{
             margin: 0;
             align-items: center;
+            width: 282px;
         }   
     }
