Правки после второго ревью

--- a/blocks/photo-grid/__like-button/photo-grid__like-button.css
+++ b/blocks/photo-grid/__like-button/photo-grid__like-button.css
@@ -4,11 +4,11 @@
 
 .photo-grid__like-button:hover {
     opacity: 0.5;
-    cursor: url(/images/Cursor_1.png), pointer;
+    cursor: url(/images/Cursor_1.svg), pointer;
 }
 
 .photo-grid__like-button:active {
     opacity: 1;
-    background-image: url(/images/Like_black.png);
-    cursor: url(/images/Cursor_1.png), pointer;
+    background-image: url(/images/Like_black.svg);
+    cursor: url(/images/Cursor_1.svg), pointer;
 }
