--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -12,11 +12,16 @@
     color: #545454;
     padding-bottom: 60px;
 }
-
+@media screen and (max-width: 920px) and (min-width: 581px)   {
+    .footer__copyright {
+       padding-left: 30px;
+    }
+}
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-
     .footer__copyright {
     margin-left: 19px;
     padding-bottom: 36px;
+    font-size: 14px;
+    line-height: 21px;
     }   
 }
