--- a/blocks/header/__group-logo/header__group-logo.css
+++ b/blocks/header/__group-logo/header__group-logo.css
@@ -3,8 +3,13 @@
     margin-bottom: 41px;
 }
 
-@media screen and (max-width: 580px) and (min-width: 320px)   {
+@media screen and (max-width: 920px) and (min-width: 581px)   {
+    .header__group-logo {
+       padding-left: 30px;
+    }
+}
 
+@media screen and (max-width: 580px) and (min-width: 320px)   {
     .header__group-logo {
         width: 103.74px;
         margin: 0;
