--- a/blocks/header/__group/header__group.css
+++ b/blocks/header/__group/header__group.css
@@ -5,15 +5,14 @@
     padding-top: 45px;
     margin-bottom: 40px;
     max-width: 880px;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-
     .header__group {
         padding-top: 0px;
         padding-bottom: 0px;
         margin-bottom: 42px;
+        padding-top: 20px;
     }
-    
 }
