--- a/blocks/popup/__close-icone/popup__close-icone.css
+++ b/blocks/popup/__close-icone/popup__close-icone.css
@@ -1,24 +1,21 @@
 .popup__close-icone {
     position: relative;
     display: block;
-    top: -11.5%;
-    left: 102.5%;
+    top: -12%;
+    left: 102%;
     width: 32px;
     height: 32px;
 }
 
 .popup__close-icone:hover {
     opacity: 0.6;
-    cursor: url(/images/Cursor_1.png), pointer;
+    cursor: url(/images/Cursor_1.svg), pointer;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-
     .popup__close-icone {
         top: -11.5%;
-        left: 45.5%;
+        left: 46.5%;
         width: 20px;
         height: 20px;
     }
-   
-}
