--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,17 +2,19 @@
     display: flex;
     flex-direction: column;
     width: 430px;
+    height: 330px;
+    margin-top: -155px;
     border-radius: 10px;
     background-color: white;
     font-family: Inter, Arial, sans-serif;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-
     .popup__container {
         max-width: 282px;
+        max-height: 322px;
+        margin-top: -132px;
         align-items: center;
-       
-    }
-   
+    } 
 }
