--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,9 @@
+.popup.popup_on {
+    display: flex;
+}
+
 .popup {
-    display: flex; /*none*/
+    display: none;
     position: fixed;
     flex-direction: column;
     justify-content: center;
@@ -13,4 +17,6 @@
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 0;
 }
+
+
 
