--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,8 +3,8 @@
     margin: 0;
     font-family: Inter, Arial, sans-serif;
     font-style: normal;
-    font-weight: 500;
-    font-size: 42px;
+    font-weight: 400;
+    font-size: 35px;
     text-align: center;
     line-height: 38px;
     color: #FFFFFF;
@@ -14,21 +14,17 @@
     box-sizing: border-box;
     margin-left: auto;
     border-radius: 2px;
-
 }
 
 .profile__add-button:hover {
     opacity: 0.6;
-    cursor: url(/images/Cursor_1.png), pointer;
+    cursor: url(/images/Cursor_1.svg), pointer;
 }
 
 @media screen and (max-width: 660px) and (min-width: 320px)   {
-
     .profile__add-button {
         margin: 0;
         width: 282px;
         height: 50px;
-       
     }
-   
 }
