--- a/blocks/profile/__info-description/profile__info-description.css
+++ b/blocks/profile/__info-description/profile__info-description.css
@@ -6,16 +6,18 @@
     line-height: 22px;
     color: #FFFFFF;
     margin: 0;
+    max-width: 336px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
-
 @media screen and (max-width: 660px) and (min-width: 320px)   {
-
     .profile__info-description {
-        margin-top: 14px;
-        margin-bottom: 36px;
+        margin-top: 6px;
+        margin-bottom: 34px;
         font-size: 14px;
         line-height: 17px;
-
+        max-width: 282px;
     }   
 }
