--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -8,12 +8,11 @@
 
 .profile__info-edit-button:hover {
     opacity: 0.6;
-    cursor: url(/images/Cursor_1.png), pointer;
+    cursor: url(/images/Cursor_1.svg), pointer;
 }
 
 
 @media screen and (max-width: 660px) and (min-width: 320px)   {
-
     .profile__info-edit-button {
         width: 18px;
         margin-left: 10px;
