--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,10 +3,10 @@
         flex-direction: column;
         margin-left: 30px;
         width: 336px;
+        margin-top: 9px;
 }
 
 @media screen and (max-width: 660px) and (min-width: 320px)   {
-
         .profile__info{
             margin: 0;
             align-items: center;
