--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -12,6 +12,7 @@
     color: rgb(255, 255, 255);
     margin-left: 36px;
     margin-bottom: 30px;
+    margin-top: 28px;
 }
 
 .popup__submit-button:hover {
@@ -30,5 +31,5 @@
         margin-left: 36px;
         margin-bottom: 30px;
     }
-   
+
 }
