--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,9 +1,11 @@
-@media screen and (max-width: 660px) and (min-width: 320px)   {
+.profile__avatar {
+  border-radius: 100%;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
 
-    .profile__avatar {
-        width: 120px;
-        margin-bottom: 26px;
-    }
-    
-    
+@media screen and (max-width: 660px) and (min-width: 320px)   {
+  .profile__avatar {
+    width: 120px;
+    margin-bottom: 26px;
+  }
 }
