--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -1,4 +1,5 @@
 .profile__info-edit-button {
+    max-width: 150px;
     margin: 0;
     margin-left: auto;
     background-color: transparent;
@@ -11,11 +12,9 @@
     cursor: url(/images/Cursor_1.svg), pointer;
 }
 
-
 @media screen and (max-width: 660px) and (min-width: 320px)   {
     .profile__info-edit-button {
         width: 18px;
         margin-left: 10px;
-    }   
+    }
 }
-        
