--- a/blocks/photo-grid/__like-button/photo-grid__like-button.css
+++ b/blocks/photo-grid/__like-button/photo-grid__like-button.css
@@ -1,19 +1,19 @@
 .photo-grid__like-button {
-    margin: 0;
-    margin-right: 20px;
-    background-color: transparent;
-    border: none;
-    padding: 0;
+  margin: 0;
+  margin-right: 20px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
 }
 
 .photo-grid__like-button:hover {
-    opacity: 0.5;
-    cursor: url(/images/Cursor_1.svg), pointer;
+  opacity: 0.5;
+  cursor: url(../../../images/Cursor_1.svg), pointer;
 }
 
 .photo-grid__like-button:active {
-    opacity: 1;
-    background-image: url(/images/Like_black.svg);
-    background-repeat: no-repeat;
-    cursor: url(/images/Cursor_1.svg), pointer;
+  opacity: 1;
+  background-image: url(/images/Like_black.svg);
+  background-repeat: no-repeat;
+  cursor: url(../../../images/Cursor_1.svg), pointer;
 }
