--- a/blocks/popup/__close-icone/popup__close-icone.css
+++ b/blocks/popup/__close-icone/popup__close-icone.css
@@ -1,26 +1,24 @@
 .popup__close-icone {
-    position: relative;
-    display: block;
-    top: -12%;
-    left: 102%;
-    width: 32px;
-    height: 32px;
-    margin: 0;
-    background-color: transparent;
-    border: none;
-    padding: 0;
+  position: relative;
+  display: block;
+  top: -12%;
+  left: 102%;
+  width: 32px;
+  margin: 0;
+  background-color: transparent;
+  border: none;
+  padding: 0;
 }
 
 .popup__close-icone:hover {
-    opacity: 0.6;
-    cursor: url(/images/Cursor_1.svg), pointer;
+  opacity: 0.6;
+  cursor: url(../../../images/Cursor_1.svg), pointer;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px) {
-    .popup__close-icone {
-        top: -11.5%;
-        left: 46.5%;
-        width: 20px;
-        height: 20px;
-    }
+  .popup__close-icone {
+    top: -11.5%;
+    left: 46.5%;
+    width: 20px;
   }
+}
