--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,20 +1,16 @@
 .popup__container {
-    display: flex;
-    flex-direction: column;
-    width: 430px;
-    height: 330px;
-    margin-top: -105px;
-    border-radius: 10px;
-    background-color: white;
-    font-family: Inter, Arial, sans-serif;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  width: 430px;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  font-family: Inter, Arial, sans-serif;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-    .popup__container {
-        max-width: 282px;
-        max-height: 322px;
-        margin-top: -132px;
-        align-items: center;
-    }
+  .popup__container {
+    max-width: 282px;
+    align-items: center;
+  }
 }
