--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -1,32 +1,31 @@
 .popup__submit-button {
-    width: 358px;
-    height: 50px;
-    background-color: black;
-    border-radius: 2px;
-    font-family: Inter, Arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 40px;
-    text-align: center;
-    color: rgb(255, 255, 255);
-    margin-left: 36px;
-    margin-bottom: 30px;
-    margin-top: 28px;
+  width: 358px;
+  background-color: black;
+  padding: 3px;
+  border-radius: 2px;
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 40px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  margin-left: 36px;
+  margin-bottom: 36px;
+  margin-top: 28px;
 }
 
 .popup__submit-button:hover {
-    cursor: url(/images/Cursor_1.svg), pointer;
+  cursor: url(../../../images/Cursor_1.svg), pointer;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-    .popup__submit-button {
-        width: 238px;
-        height: 46px;
-        margin-left: 0;
-        font-size: 14px;
-        line-height: 40px;
-        text-align: center;
-        margin-bottom: 30px;
-    }
+  .popup__submit-button {
+    width: 238px;
+    margin-left: 0;
+    font-size: 14px;
+    line-height: 40px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
 }
