--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,7 +5,7 @@
   margin-left: auto;
   border-radius: 2px;
   background-color: transparent;
-  background: url(/images/Add_Button_descktop.svg);
+  background-image: url(../../../images/Add_Button_descktop.svg);
   background-repeat: no-repeat;
   object-fit: cover;
   border: none;
@@ -14,14 +14,14 @@
 
 .profile__add-button:hover {
   opacity: 0.6;
-  cursor: url(/images/Cursor_1.svg), pointer;
+  cursor: url(../../../images/Cursor_1.svg), pointer;
 }
 
 @media screen and (max-width: 660px) and (min-width: 320px)   {
   .profile__add-button {
-      background: url(/images/Add_Button_mobile.svg);
-      margin: 0;
-      width: 282px;
-      height: 50px;
+    background-image: url(../../../images/Add_Button_mobile.svg);
+    margin: 0;
+    width: 282px;
+    height: 50px;
   }
 }
