Правки после четвертого  ревью

--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -20,7 +20,7 @@
   .popup__input {
     margin-left: 0;
     width: 238px;
-    line-height: 2;
+    line-height: 17px;
     margin-bottom: 26px;
   }
 }
