--- a/blocks/photo-grid/__card-title/photo-grid__card-title.css
+++ b/blocks/photo-grid/__card-title/photo-grid__card-title.css
@@ -4,10 +4,12 @@
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
-  line-height: 79px;
+  line-height: 29px;
   color: #000000;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   margin-left: 21px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
