--- a/blocks/popup/__close-icone/popup__close-icone.css
+++ b/blocks/popup/__close-icone/popup__close-icone.css
@@ -8,6 +8,9 @@
   background-color: transparent;
   border: none;
   padding: 0;
+  background-image: url(../../../images/Close_Icon.svg);
+  background-repeat: no-repeat;
+  object-fit: cover;
 }
 
 .popup__close-icone:hover {
