--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,5 @@
 .popup__title {
-  margin: 0;
-  margin-left: 36px;
+  margin: 0 auto;
   margin-bottom: 54px;
   font-family: Inter, Arial, sans-serif;
   font-style: normal;
@@ -13,7 +12,6 @@
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    margin-left: -8px;
     margin-top: 5px;
     margin-bottom: 69px;
   }
