--- a/blocks/popup/__close-icone/popup__close-icone.css
+++ b/blocks/popup/__close-icone/popup__close-icone.css
@@ -1,9 +1,10 @@
 .popup__close-icone {
-  position: relative;
+  position: absolute;
   display: block;
-  top: -12%;
-  left: 102%;
+  top: 155px;
+  left: 864px;
   width: 32px;
+  height: 32px;
   margin: 0;
   background-color: transparent;
   border: none;
@@ -20,8 +21,11 @@
 
 @media screen and (max-width: 580px) and (min-width: 320px) {
   .popup__close-icone {
-    top: -11.5%;
-    left: 46.5%;
+    background-image: url(../../../images/Close_Icon_mobile.svg);
+    left: 131px;
+    top: -16px;
+    position: relative;
     width: 20px;
+    height: 20px;
   }
 }
