--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -14,14 +14,13 @@
   background-color: #fff;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 8px;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
   .popup__input {
     margin-left: 0;
     width: 238px;
-    line-height: 17px;
-    margin-bottom: 26px;
   }
 }
 
