--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,6 +1,9 @@
 .popup__title {
   margin: 0 auto;
-  margin-bottom: 54px;
+  margin-left: 36px;
+  margin-right: 64px;
+  margin-top: 34px;
+  margin-bottom: 48px;
   font-family: Inter, Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
@@ -12,7 +15,9 @@
   .popup__title {
     font-size: 18px;
     line-height: 22px;
-    margin-top: 5px;
-    margin-bottom: 69px;
+    margin-top: 26px;
+    margin-left: 14px;
+    margin-right: 22px;
+    margin-bottom: 75px;
   }
 }
