--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -1,20 +1,23 @@
 .profile__info-edit-button {
-  max-width: 150px;
+  width: 32px;
+  height: 32px;
   margin: 0;
-  margin-left: auto;
   background-color: transparent;
   border: none;
   padding: 0;
+  background-image: url(../../../images/Edit_Button.svg);
+  background-repeat: no-repeat;
+  object-fit: contain;
 }
 
 .profile__info-edit-button:hover {
   opacity: 0.6;
   cursor: url(../../../images/Cursor_1.svg), pointer;
 }
-
-@media screen and (max-width: 660px) and (min-width: 320px)   {
-  .profile__info-edit-button {
+@media screen and (max-width: 660px) and (min-width: 320px) {
+.profile__info-edit-button {
     width: 18px;
-    margin-left: 10px;
+    background-image: url(../../../images/Edit_Button_mobile.svg);
+    background-position: center;
   }
 }
