--- a/blocks/profile/__info-name/profile__info-name.css
+++ b/blocks/profile/__info-name/profile__info-name.css
@@ -6,20 +6,23 @@
   line-height: 36px;
   color: #FFFFFF;
   margin: 0;
-  margin-bottom: 16px;
+  padding-bottom: 16px;
+  margin-right: 19px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   max-width: 294px;
 }
 
-@media screen and (max-width: 660px) and (min-width: 320px)   {
+@media screen and (max-width: 660px) and (min-width: 320px) {
   .profile__info-name {
     font-size: 27px;
     line-height: 33px;
     margin-bottom: 0px;
     max-width: 189px;
-    margin-left: 37px;
+    margin-left: 25px;
+    margin-right: 12px;
+    padding-bottom: 0;
   }
 }
 
