--- a/blocks/photo-grid/__like-button/photo-grid__like-button.css
+++ b/blocks/photo-grid/__like-button/photo-grid__like-button.css
@@ -1,7 +1,12 @@
 .photo-grid__like-button {
   margin: 0;
-  margin-right: 20px;
+  margin-right: 15px;
+  width: 22px;
+  height: 19px;
   background-color: transparent;
+  background-image: url(../../../images/like-button.svg);
+  background-repeat: no-repeat;
+  object-fit: cover;
   border: none;
   padding: 0;
 }
@@ -13,7 +18,7 @@
 
 .photo-grid__like-button:active {
   opacity: 1;
-  background-image: url(/images/Like_black.svg);
+  background-image: url(../../../images/Like_black.svg);
   background-repeat: no-repeat;
   cursor: url(../../../images/Cursor_1.svg), pointer;
 }
