--- a/pages/index.css
+++ b/pages/index.css
@@ -37,5 +37,11 @@
 @import url(../blocks/popup-place/__container/popup-place__container.css);
 @import url(../blocks/popup-place/__container-form/popup-place__container-form.css);
 @import url(../blocks/popup-place/__close-icone/popup-place__close-icone.css);
+@import url(../blocks/popup-gallery/popup-gallery.css);
+@import url(../blocks/popup-gallery/_on/popup__gallery_on.css);
+@import url(../blocks/popup-gallery/__container/popup-gallery__container.css);
+@import url(../blocks/popup-gallery/__close-icone/popup__close-icone.css);
+@import url(../blocks/popup-gallery/__image/popup-gallery__image.css);
+@import url(../blocks/popup-gallery/__description/popup-gallery__description.css);
 
 
