отправка на ревью

--- a/blocks/popup-gallery/popup-gallery.css
+++ b/blocks/popup-gallery/popup-gallery.css
@@ -1,5 +1,8 @@
 .popup-gallery {
-  display: none; /*display: flex;*/
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s;
   position: fixed;
   flex-direction: column;
   justify-content: center;
