--- a/blocks/popup-gallery/__close-icone/popup-gallery__close-icone.css
+++ b/blocks/popup-gallery/__close-icone/popup-gallery__close-icone.css
@@ -22,8 +22,8 @@
 @media screen and (max-width: 580px) and (min-width: 320px) {
   .popup-gallery__close-icone {
     background-image: url(../../../images/Close_Icon_mobile.svg);
-    left: 0px;
-    top: 0px;
+    right: 0px;
+    top: -32px;
     width: 20px;
     height: 20px;
   }
