--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,9 @@
 .popup {
-  display: none;
+  visibility: hidden;
   position: fixed;
+  display: flex;
+  opacity: 0;
+  transition: 0.5s;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -11,7 +14,6 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 0;
 }
 
 
