--- a/blocks/popup/_gallery/popup_gallery.css
+++ b/blocks/popup/_gallery/popup_gallery.css
@@ -1,9 +1,9 @@
-.popup {
-  visibility: hidden;
-  position: fixed;
+.popup_gallery {
   display: flex;
+  visibility: hidden;
   opacity: 0;
   transition: 0.5s;
+  position: fixed;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -13,4 +13,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 0;
 }
+
