--- a/blocks/popup/_user/popup_user.css
+++ b/blocks/popup/_user/popup_user.css
@@ -1,4 +1,4 @@
-.popup {
+.popup_user {
   visibility: hidden;
   position: fixed;
   display: flex;
@@ -13,4 +13,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
+
+
