--- a/blocks/popup/__container-form-title/popup__container-form-title.css
+++ b/blocks/popup/__container-form-title/popup__container-form-title.css
@@ -1,4 +1,4 @@
-.popup__title {
+.popup__container-form-title {
   margin: 0 auto;
   margin-left: 36px;
   margin-right: 64px;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-  .popup__title {
+  .popup__container-form-title {
     font-size: 18px;
     line-height: 22px;
     margin-top: 26px;
