--- a/blocks/popup/__container-form/_user-form/popup__container-form_user-form.css
+++ b/blocks/popup/__container-form/_user-form/popup__container-form_user-form.css
@@ -1,10 +1,10 @@
-.popup__user_form {
+.popup__container-form_user-form {
   display: flex;
   flex-direction: column;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-  .popup__user_form {
+  .popup__container-form_user-form {
     align-items: center;
   }
 }
