--- a/blocks/popup/_user-close-icone/popup_user-close-icone.css
+++ b/blocks/popup/_user-close-icone/popup_user-close-icone.css
@@ -1,4 +1,4 @@
-.popup__user_close-icone {
+.popup_user-close-icone {
   position: relative;
   display: block;
   top: -10px;
@@ -9,19 +9,19 @@
   background-color: transparent;
   border: none;
   padding: 0;
-  background-image: url(../../../../images/Close_Icon.svg);
+  background-image: url(../../../images/Close_Icon.svg);
   background-repeat: no-repeat;
   object-fit: cover;
 }
 
-.popup__user_close-icone:hover {
+.popup_user-close-icone:hover {
   opacity: 0.6;
-  cursor: url(../../../../images/Cursor_1.svg), pointer;
+  cursor: url(../../../images/Cursor_1.svg), pointer;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px) {
-  .popup__user_close-icone {
-    background-image: url(../../../../images/Close_Icon_mobile.svg);
+  .popup_user-close-icone {
+    background-image: url(../../../images/Close_Icon_mobile.svg);
     left: 131px;
     top: -16px;
     position: relative;
