--- a/blocks/popup/_user_close-icone/popup_user_close-icone.css
+++ b/blocks/popup/_user_close-icone/popup_user_close-icone.css
@@ -1,4 +1,4 @@
-.popup_user-close-icone {
+.popup_user_close-icone {
   position: relative;
   display: block;
   top: -10px;
@@ -14,13 +14,13 @@
   object-fit: cover;
 }
 
-.popup_user-close-icone:hover {
+.popup_user_close-icone:hover {
   opacity: 0.6;
   cursor: url(../../../images/Cursor_1.svg), pointer;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px) {
-  .popup_user-close-icone {
+  .popup_user_close-icone {
     background-image: url(../../../images/Close_Icon_mobile.svg);
     left: 131px;
     top: -16px;
