--- a/blocks/popup/__container-form-input/_link/popup__container-form-input_link.css
+++ b/blocks/popup/__container-form-input/_link/popup__container-form-input_link.css
@@ -1,4 +1,4 @@
-.popup_place_link-input {
+.popup__container-form-input_link {
   display: block;
   margin: 0;
   margin-bottom: 30px;
@@ -18,7 +18,7 @@
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
-  .popup_place_link-input {
+  .popup__container-form-input_link {
     margin-left: 0;
     width: 238px;
   }
