--- a/blocks/popup/__gallery-close-icone/popup__gallery-close-icone.css
+++ b/blocks/popup/__gallery-close-icone/popup__gallery-close-icone.css
@@ -1,4 +1,4 @@
-.popup_gallery-close-icone {
+.popup__gallery-close-icone {
   position: absolute;
   display: block;
   top: -37px;
@@ -9,19 +9,19 @@
   background-color: transparent;
   border: none;
   padding: 0;
-  background-image: url(../../../../images/Close_Icon.svg);
+  background-image: url(../../../images/Close_Icon.svg);
   background-repeat: no-repeat;
   object-fit: cover;
 }
 
-.popup_gallery-close-icone:hover {
+.popup__gallery-close-icone:hover {
   opacity: 0.6;
-  cursor: url(../../../../images/Cursor_1.svg), pointer;
+  cursor: url(../../../images/Cursor_1.svg), pointer;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px) {
-  .popup_gallery-close-icone  {
-    background-image: url(../../../../images/Close_Icon_mobile.svg);
+  .popup__gallery-close-icone  {
+    background-image: url(../../../images/Close_Icon_mobile.svg);
     right: 0px;
     top: -32px;
     width: 20px;
