feat: валидация форм JS-ом

--- a/blocks/popup/__container-form-input/_link/popup__container-form-input_link.css
+++ b/blocks/popup/__container-form-input/_link/popup__container-form-input_link.css
@@ -1,7 +1,7 @@
 .popup__container-form-input_link {
   display: block;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 0;
   font-family: inherit;
   max-width: 358px;
   margin-left: 36px;
