--- a/blocks/popup/__container-form-input/_user-name/popup__container-form-input_user-name.css
+++ b/blocks/popup/__container-form-input/_user-name/popup__container-form-input_user-name.css
@@ -1,26 +1,10 @@
 .popup__container-form-input_user-name {
-  display: block;
-  margin: 0;
-  margin-bottom: 30px;
-  font-family: inherit;
-  max-width: 358px;
-  margin-left: 36px;
-  outline: none;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 17px;
-  color: #000000;
-  background-color: #fff;
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  padding-bottom: 8px;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
   .popup__container-form-input_user-name {
-    margin-left: 0;
-    width: 238px;
+
   }
 }
 
