--- a/blocks/popup/__container-form-input/_location/popup__container-form-input_location.css
+++ b/blocks/popup/__container-form-input/_location/popup__container-form-input_location.css
@@ -1,10 +1,11 @@
 .popup__container-form-input_location {
-margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
   .popup__container-form-input_location {
-
+    margin-left: 0;
+    width: 238px;
   }
 }
 
