--- a/blocks/popup/__container-form-input/_user-name/popup__container-form-input_user-name.css
+++ b/blocks/popup/__container-form-input/_user-name/popup__container-form-input_user-name.css
@@ -4,7 +4,8 @@
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
   .popup__container-form-input_user-name {
-
+    margin-left: 0;
+    width: 238px;
   }
 }
 
