--- a/blocks/popup/__container-form/popup__container-form.css
+++ b/blocks/popup/__container-form/popup__container-form.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 430px;
+  min-height: 330px;
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
   font-family: Inter, Arial, sans-serif;
@@ -11,6 +12,7 @@
 @media screen and (max-width: 580px) and (min-width: 320px)   {
   .popup__container-form {
     max-width: 282px;
+    min-height: 322px;
     align-items: center;
   }
 }
