--- a/blocks/popup/__error/_visible/popup__error_visible.css
+++ b/blocks/popup/__error/_visible/popup__error_visible.css
@@ -1,3 +1,10 @@
 .popup__error_visible {
   visibility: visible;
+  margin-left: 36px;
+}
+
+@media screen and (max-width: 580px) and (min-width: 320px)   {
+  .popup__error_visible {
+    margin-left: -93px;
+  }
 }
