--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -12,7 +12,7 @@
 
 .profile__info-edit-button:hover {
   opacity: 0.6;
-  cursor: url(../../../images/Cursor_1.svg), pointer;
+  cursor: pointer;
 }
 @media screen and (max-width: 660px) and (min-width: 320px) {
 .profile__info-edit-button {
