fix: доработка подтверждения формы, убрать лишние граф.элементы

--- a/blocks/photo-grid/__card-delete/photo-grid__card-delete.css
+++ b/blocks/photo-grid/__card-delete/photo-grid__card-delete.css
@@ -12,6 +12,6 @@
 
 .photo-grid__card-delete:hover {
   opacity: 60%;
-  cursor: url(../../../images/Cursor_1.svg), pointer;
+  cursor: pointer;
 }
 
