--- a/blocks/photo-grid/__like-button/_active/photo-grid__like-button_active.css
+++ b/blocks/photo-grid/__like-button/_active/photo-grid__like-button_active.css
@@ -7,6 +7,6 @@
 
 .photo-grid__like-button_active:hover {
   opacity: 0.5;
-  cursor: url(../../../../images/Cursor_1.svg), pointer;
+  cursor: pointer;
 }
 
