--- a/blocks/popup/__gallery-close-icone/popup__gallery-close-icone.css
+++ b/blocks/popup/__gallery-close-icone/popup__gallery-close-icone.css
@@ -16,7 +16,7 @@
 
 .popup__gallery-close-icone:hover {
   opacity: 0.6;
-  cursor: url(../../../images/Cursor_1.svg), pointer;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px) {
