--- a/pages/index.css
+++ b/pages/index.css
@@ -45,6 +45,7 @@
 @import url(../blocks/popup/__container-form-submit-button/popup__container-form-submit-button.css);
 @import url(../blocks/popup/__container-form-submit-button/_active/popup__container-form-submit-button_active.css);
 @import url(../blocks/popup/__container-form-submit-button/_disabled/popup__container-form-submit-button_disabled.css);
+@import url(../blocks/popup/__container-form-submit-button/_type_place/popup__container-form-submit-button_type_place.css);
 @import url(../blocks/popup/__container-form-title/popup__container-form-title.css);
 @import url(../blocks/popup/__container-form/popup__container-form.css);
 
