--- a/blocks/popup/__container-form-submit-button/popup__container-form-submit-button.css
+++ b/blocks/popup/__container-form-submit-button/popup__container-form-submit-button.css
@@ -14,6 +14,7 @@
   margin-left: 36px;
   margin-bottom: 37px;
   margin-top: 18px;
+  border-width: 0px;
 }
 
 .popup__container-form-submit-button:hover {
