--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/fonts.css);
+@import url(../vendor/fonts/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__group-logo/header__group-logo.css);
@@ -11,14 +11,18 @@
 @import url(../blocks/profile/__info-edit-button/profile__info-edit-button.css);
 @import url(../blocks/profile/__info-description/profile__info-description.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+
 @import url(../blocks/photo-grid/photo-grid.css);
-@import url(../blocks/photo-grid/__like-button/photo-grid__like-button.css);
-@import url(../blocks/photo-grid/__like-button/_active/photo-grid__like-button_active.css);
-@import url(../blocks/photo-grid/__card-delete/photo-grid__card-delete.css);
-@import url(../blocks/photo-grid/__item/photo-grid__item.css);
-@import url(../blocks/photo-grid/__card-title/photo-grid__card-title.css);
-@import url(../blocks/photo-grid/__card-image/photo-grid__card-image.css);
-@import url(../blocks/photo-grid/__card-description/photo-grid__card-description.css);
+
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
+@import url(../blocks/card/__card-delete/card__delete-button.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__description/card__description.css);
+
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
@@ -67,8 +71,3 @@
 
 @import url(../blocks/popup/__error/popup__error.css);
 @import url(../blocks/popup/__error/_visible/popup__error_visible.css);
-
-
-
-
-
