refact: разложить функционал на классы, гибридная связь с колбэкамиб

--- a/pages/index.css
+++ b/pages/index.css
@@ -71,3 +71,5 @@
 
 @import url(../blocks/popup/__error/popup__error.css);
 @import url(../blocks/popup/__error/_visible/popup__error_visible.css);
+
+@import url(../blocks/popup/__close-icone/popup__close-icone.css);
