--- a/src/styles/blocks/popup/__container-form/popup__container-form.css
+++ b/src/styles/blocks/popup/__container-form/popup__container-form.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 430px;
-  min-height: 330px;
+  max-height: 330px;
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
   font-family: Inter, Arial, sans-serif;
