feat: overlay для аватарки, функциональность окна аватарки

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,6 +7,10 @@
 @import url(./../styles/blocks/profile/__info/profile__info.css);
 @import url(./../styles/blocks/profile/__info-title/profile__info-title.css);
 @import url(./../styles/blocks/profile/__avatar/profile__avatar.css);
+@import url(./../styles/blocks/profile/__avatar/_overlay/profile__avatar_overlay.css);
+@import url(./../styles/blocks/profile/__avatar/_picture/profile__avatar_picture.css);
+
+
 @import url(./../styles/blocks/profile/__info-name/profile__info-name.css);
 @import url(./../styles/blocks/profile/__info-edit-button/profile__info-edit-button.css);
 @import url(./../styles/blocks/profile/__info-description/profile__info-description.css);
