--- a/src/styles/blocks/profile/__avatar/profile__avatar.css
+++ b/src/styles/blocks/profile/__avatar/profile__avatar.css
@@ -1,16 +1,8 @@
 .profile__avatar {
-  border-radius: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 100%;
+position: relative;
 }
 
-@media screen and (max-width: 915px) and (min-width: 661px){
-  .profile__avatar {
-    margin-left: 20px;
-  }
-}
-
-@media screen and (max-width: 660px) and (min-width: 320px)   {
-  .profile__avatar {
-    width: 120px;
-    margin-bottom: 26px;
-  }
-}
