feat: подключение к серверу user-profile

--- a/src/styles/blocks/profile/__avatar/profile__avatar.css
+++ b/src/styles/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,11 @@
 .profile__avatar {
-display: flex;
-justify-content: center;
-align-items: center;
-border-radius: 100%;
-position: relative;
+  height: 120px;
+  width: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  overflow: hidden;
+  border-radius: 100%;
+  position: relative;
 }
-
