--- a/src/styles/blocks/popup/__container-form-input/_user-description/popup__container-form-input_user-description.css
+++ b/src/styles/blocks/popup/__container-form-input/_user-description/popup__container-form-input_user-description.css
@@ -1,5 +1,6 @@
 .popup__container-form-input_user-description {
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 @media screen and (max-width: 580px) and (min-width: 320px)   {
