--- a/src/styles/blocks/profile/__avatar/_picture/profile__avatar_picture.css
+++ b/src/styles/blocks/profile/__avatar/_picture/profile__avatar_picture.css
@@ -1,5 +1,7 @@
 .profile__avatar_picture {
   border-radius: 100%;
+  height: 100%;
+  width: auto;
 }
 
 @media screen and (max-width: 915px) and (min-width: 661px){
